--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="color-scheme" content="light dark" />
-		<title>Vite + Preact</title>
+		<title>Chamran-Social</title>
+		<script type="module" src="src/index.tsx"></script>
 	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="/src/index.jsx"></script>
-	</body>
+	<body></body>
 </html>
